[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack"
description = ""
version = "0.1.0"
authors = [
  { name="Foo Barstein", email="foo.barstein@onepotcooking.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "blackjack"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]